@@ -7,8 +7,13 @@ import javax.swing.JComponent
 import java.awt.geom.{AffineTransform, Rectangle2D}
 import umd.cs.piccolo.util.PDimension
 
-class CenteredBoxStrategy(modelWidth: Double, modelHeight: Double, canvas: JComponent) extends PhetPCanvas.TransformStrategy {
-  def this(dim:PDimension,canvas:JComponent) = this(dim.width,dim.height,canvas)
+class CenteredBoxStrategy(modelWidth: Double,
+                          modelHeight: Double,
+                          canvas: JComponent,
+                          modelOffsetY: Double)
+        extends PhetPCanvas.TransformStrategy {
+  def this(dim: PDimension, canvas: JComponent) = this (dim.width, dim.height, canvas,0)
+
   def getTransform(): AffineTransform = {
     if (canvas.getWidth > 0 && canvas.getHeight > 0) {
       val mv2d = getModelViewTransform2D
@@ -34,8 +39,7 @@ class CenteredBoxStrategy(modelWidth: Double, modelHeight: Double, canvas: JComp
       new Rectangle2D.Double(0, (canvas.getHeight - canvas.getWidth) / 2.0, canvas.getWidth, canvas.getWidth)
     else
       new Rectangle2D.Double((canvas.getWidth - canvas.getHeight) / 2.0, 0, canvas.getHeight, canvas.getHeight)
-
-    new ModelViewTransform2D(new Rectangle2D.Double(0, 0, modelWidth, modelHeight), outputBox, false)
+    new ModelViewTransform2D(new Rectangle2D.Double(0, modelOffsetY, modelWidth, modelHeight), outputBox, false)
   }
 
   def getVisibleModelBounds = getModelViewTransform2D.getAffineTransform.createInverse.createTransformedShape(new Rectangle(canvas.getWidth, canvas.getHeight)).getBounds2D
