@@ -1,3 +1,4 @@
+Moved viewport north in Work/Energy/Force graphs tab so all series controls are visible
 Limited to one firedog at a time.
 # 1.03.32 (34332) Aug 19, 2009
 Fixed: When there is a lot of recorded chart data, the chart maximize/minimize buttons can go offscreen, see screenshot.
